# smart-air

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
src/app/: main.py  natural_to_sql.py
src/app/static/: styles.css
src/app/templates/: index.html  results.html
src/config/: llm_config.py  log_path_formatter.py  logging_config.ini
src/llm/: __init__.py  generator.py  llm_client.py  prompts.py
src/sqlite_db/: __init__.py  create.py  db_constants.py  execute.py
src/utils/: __init__.py  helpers.py
tests/: test_execute.py  test_generator.py  test_helpers.py
