[tool.poetry]
name = "smart-air"
version = "0.1.0"
description = ""
authors = ["Rewan Gautam <rewangautam@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sqlite_db", from = "src" },
    { include = "llm", from = "src" },
    { include = "app", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[virtualenvs]
create = false
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
db-sqlite3 = "^0.0.1"
openai = "^1.63.0"
python-dotenv = "^1.0.1"
pre-commit = "^4.1.0"
fastapi = "^0.115.8"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
